# zep-os

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile
cmake/: FastLink.cmake  Flags.cmake  Modules.cmake  Standards.cmake  userspace.cmake
common/include/common/: string_view.h  syscalls.h  types.h
esp_aarch64/EFI/BOOT/: BOOTAA64.EFI
esp_x86_64/: OVMF_VARS.fd
esp_x86_64/EFI/BOOT/: BOOTX64.EFI
examples/app/: zep.json
examples/app/src/: lib.zep  std.zep
iso_root_aarch64/boot/: zep_kernel
iso_root_x86_64/boot/: limine.conf  zep_kernel
kernel/: CMakeLists.txt
kernel/linker/: aarch64-direct.ld  aarch64.ld  riscv64.ld  x86_64-direct.ld  x86_64.ld
kernel/src/: context.cppm  entry.cpp  init.cpp  serial.cppm  test.cppm
kernel/src/arch/: arch.cppm
kernel/src/arch/aarch64/: entry.cpp  init.cpp  serial.cppm
kernel/src/arch/aarch64/common/: arch.cpp  std.cpp
kernel/src/arch/x86_64/: entry.cpp  init.cpp  serial.cppm
kernel/src/arch/x86_64/common/: arch.cpp  std.cpp
kernel/src/boot/: info.cpp  info.cppm  info.h
kernel/src/boot/efi/: entry.cpp
kernel/src/boot/limine/: info.cpp  info.h  limine.h
kernel/src/common/: logger.cppm
kernel/src/device/: device.cppm
kernel/src/device/display/framebuffer/: framebuffer.cppm
kernel/src/device/fs/: fat.cppm  fs.cppm
kernel/src/device/gpu/framebuffer/: framebuffer.cppm
kernel/src/device/graphics/: framebuffer.cppm  graphics.cppm
kernel/src/device/keyboard/: keyboard.cppm
kernel/src/device/memory/: memory.cppm  memory_map.cppm  physical_memory.cppm  vmm.cppm
kernel/src/device/nvme/: nvme.cppm
kernel/src/device/serial/: serial.cppm
kernel/src/device/video/framebuffer/: framebuffer.cppm  limine.cppm
kernel/src/gfx/: color.cppm  font.cppm  framebuffer.cppm  terminal.cppm
kernel/src/gfx/renderer/: font.cppm  renderer.cppm
kernel/src/gfx/terminal/: color.cppm  terminal.cppm
kernel/src/memory/: memory_map.cppm  physical_memory.cppm
kernel/src/runtime/: runtime.cpp  runtime.h
kernel/src/serial/: serial.cppm
kernel/src/std/: arch.cppm  map.cppm  math.cppm  runtime.cpp  runtime.h  std.cppm  string_view.cppm  types.cppm
kernel/src/system/: elf.cppm  gdt.cppm  interrupts.cppm  scheduler.cppm  syscalls.cppm
kernel/zep/: zep.json
kernel/zep/src/: context.zep  global.zep  lib.zep  std.zep
kernel/zep/src/common/: logger.zep
kernel/zep/src/gfx/: framebuffer.zep  terminal.zep
kernel/zep/src/serial/: index.zep
libc/: CMakeLists.txt
libc/src/: stdlib.cpp
libc/src/arch/aarch64/: syscall.cpp
libc/src/arch/x86_64/: syscall.cpp
scripts/: limine.conf
